# NumericalAnalysis

./: .gitignore  CMakeLists.txt  README.md  cleanRepository.sh  run.sh
linear_algebra/: CMakeLists.txt  README.md
linear_algebra/include/linear_algebra/: linear_algebra.h  linear_algebra_exceptions.h  linear_algebra_operations.h  matrix.h  specialMatricies.h  vector.h
linear_algebra/src/: linear_algebra_exceptions.cpp  linear_algebra_operations.cpp  matrix.cpp  specialMatricies.cpp  vector.cpp
project_diagram/: README.md
project_management/: CMakeLists.txt  README.md
project_management/include/project_management/: projectDriver.h
project_management/src/: project.cpp  projectInput.cpp
solver/: CMakeLists.txt  README.md
solver/include/solver/: solver.h
src/: main.cpp
test/: CMakeLists.txt
test/include/: test_matrix.h
test/src/: main_test.cpp  test_matrix.cpp
text_files/: README.md  matrix.txt  matrix2.txt
